# AIDI1000

./: README.md  label_encoder.pkl  main.py  penguin_classifier_model.pkl  pyproject.toml  train.ipynb
